[gd_scene load_steps=2 format=3 uid="uid://oxe635iv3dxu"]

[ext_resource type="Script" uid="uid://bu1nw5nduvk11" path="res://Components/body_component_bottomPiece.gd" id="1_ojplx"]

[node name="body_Component_bottomPiece" type="CharacterBody3D"]
script = ExtResource("1_ojplx")

[node name="Timer_Idle_Move" type="Timer" parent="."]

[node name="Timer_Move_Left_Delay" type="Timer" parent="."]

[node name="Timer_Move_Right_Delay" type="Timer" parent="."]

[node name="Timer_Fallen_Delay" type="Timer" parent="."]

[node name="DownwardTweens" type="Node3D" parent="."]
unique_name_in_owner = true
